feat: enhance SEO, add favicon, and optimize performance

--- a/index.html
+++ b/index.html
@@ -2,7 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Neural Whisper - Advanced Audio Transcription Interface. High-performance neural network-based audio processing and transcription tool." />
+    <meta name="keywords" content="neural whisper, audio transcription, ai, speech to text, cyber, interface" />
+    <meta name="theme-color" content="#000000" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://neuralwhisper.interface/" />
+    <meta property="og:title" content="Neural Whisper // Interface" />
+    <meta property="og:description" content="Advanced Audio Transcription Interface with neural processing capabilities." />
+    <meta property="og:image" content="/favicon.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Neural Whisper // Interface" />
+    <meta property="twitter:description" content="Advanced Audio Transcription Interface with neural processing capabilities." />
+    <meta property="twitter:image" content="/favicon.png" />
+
     <title>Neural Whisper // Interface</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
